----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-03-03 Alexander M. Turek  <rabus@users.sourceforge.net>
    * tbl_replace_fields.php3: Bugfix: User was unable to insert values
      containing quotes.
    * libraries/common.lib.php3:
      - Avoid reloading the left frame twice;
      - PHP3 compatibility;
      - $cfg['PmaAbsoluteUri'] autodetection did not work as expected if php was
        in CGI mode.

2003-03-03 Marc Delisle  <lem9@users.sourceforge.net>
    * badwords.txt: bug 692874: "date" is not a reserved word

2003-03-02 Alexander M. Turek  <rabus@users.sourceforge.net>
    * db_details.php3, db_details_qbe.php3, db_search.php3, ldi_check.php3,
      mult_submits.inc.php3, read_dump.php3, sql.php3, tbl_addfield.php3,
      tbl_change.php3, tbl_create.php3, tbl_dump.php3, tbl_indexes.php3,
      tbl_move_copy.php3, tbl_properties.inc.php3,
      tbl_properties_operations.php3, tbl_properties_options.php3,
      tbl_query_box.php3, tbl_rename.php3, tbl_replace.php3,
      tbl_replace_fields.php3, tbl_select.php3, transformation_wrapper.php3,
      user_password.php3, libraries/build_dump.php3, libraries/common.lib.php3,
      libraries/display_tbl.lib.php3, libraries/grab_globals.php3:
      If magic_quotes_gpc is enabled, grab_globals calls stripslashes when
      extracting the arrays $_GET and $_POST. This should replace a lots of
      workarounds and avoid present and future problems with magic_quotes_gpc.
    * server_privileges.php3, libraries/common.lib.php3:
      - Escape wildcard characters in the database and table dropdown boxes;
      - CSS fixes.

2003-03-01 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/english: typo
    * tbl_dump.php3: undefined variable $use_comments
    * tbl_properties_export.php3: bug 692143: now we remove the
      LIMIT clause from the original query to use the limits entered
      on the export form
    * pdf_schema.php3: better header/footer for long pages,