@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-03-05 Marc Delisle  <lem9@users.sourceforge.net>
+    * Documentation.html, faq 1.29 about the "duplicate field names" problem
+
 2003-03-03 Alexander M. Turek  <rabus@users.sourceforge.net>
     * tbl_replace_fields.php3: Bugfix: User was unable to insert values
       containing quotes.
